--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,17 +8,13 @@
 
 <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="14" />
 
-    <application android:icon="@drawable/bpicon100" android:label="@string/app_name" android:debuggable="false">
+    <application android:label="@string/app_name" android:debuggable="false">
         <activity android:label="@string/app_name" android:name="se.eneroth.tinycam.Start" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="se.eneroth.tinycam.BPList" android:label="@string/app_name" android:screenOrientation="portrait">
-		</activity>
-		 <activity android:name="se.eneroth.tinycam.ShowBp" android:label="@string/app_name" android:screenOrientation="portrait">
-		</activity>
     </application>
     
 </manifest>
